--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -14,6 +14,7 @@
 				<label
 					for="{{ability}}"
 					class="resource-label rollable"
+					data-rollable
 					data-roll="d20+{{skill.value}}+{{../../system.abilities.ability.mod}}"
 					data-label="{{actor.name}} performed a {{skill.label}} roll using {{ability}}"
 				>
