--- a/templates/actor/parts/actor-features.hbs
+++ b/templates/actor/parts/actor-features.hbs
@@ -16,7 +16,7 @@
     <li class='item flexrow' data-item-id='{{item._id}}'>
       <div class='item-name'>
         <div class='item-image'>
-          <a class='rollable' data-roll-type='item'>
+          <a class='rollable' data-rollable data-roll-type='item'>
             <img
               src='{{item.img}}'
               title='{{item.name}}'
