--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -118,14 +118,14 @@
 								<tr>
 									<td colspan=999>RANGE</td>
 								</tr>
-								{{#if item.system.range.flat}}
+								{{!-- {{#if item.system.range.flat}}
 								<tr>
 									<td>flat</td>
 								</tr>
 								<tr>
 									<td>{{item.system.range.flat}}ft</td>
 								</tr>
-								{{else}}
+								{{else}} --}}
 								<tr>
 									<td>Short</td>
 									<td>Long (Disadvantage)</td>
@@ -139,7 +139,7 @@
 									</td>
 									<td>{{system.range.long}}ft+</td>
 								</tr>
-								{{/if}}
+								{{!-- {{/if}} --}}
 							</table>
 							<table class="equipped-stats">
 								<tr>
