--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -52,7 +52,7 @@
 		</tr>
 		<tr>
 			<td><input type="number" name="system.healingRate" value="{{system.healingRate}}"></td>
-			<td><input type="number" name="system.combat-sequence.value" value="{{system.combat-sequence.value}}"></td>
+			<td><input type="number" name="system.combatSequence" value="{{system.combatSequence}}"></td>
 			<td><input type="number" name="system.penalties.fatigue.value" value="{{system.penalties.fatigue.value}}"></td>
 		</tr>
 		<tr>
@@ -62,8 +62,8 @@
 		</tr>
 		<tr>
 			<td><input type="number" name="system.passiveSense" value="{{system.passiveSense}}"></td>
-			<td><input type="number" name="system.party-nerve.value" value="{{system.party-nerve.value}}"></td>
-			<td><input type="number" name="system.group-sneak.value" value="{{system.group-sneak.value}}"></td>
+			<td><input type="number" name="system.partyNerve" value="{{system.partyNerve}}"></td>
+			<td><input type="number" name="system.groupSneak.value" value="{{system.groupSneak}}"></td>
 		</tr>
 			<tr><td colspan=4><img id="vault-boy-status" style="width:auto;height:250px;display:block;margin:auto;border:none;" src='/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png'></td></tr>
 			<tr>
