--- a/templates/item/item-medicine-sheet.hbs
+++ b/templates/item/item-medicine-sheet.hbs
@@ -10,7 +10,7 @@
 <tr>
 <td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
 <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
-<td><input type="number" name="system.itemQty.value" value="{{system.itemQty.value}}" /></td>
+<td><input type="number" name="system.quantity" value="{{system.quantity}}" /></td>
 </tr>
 </table>
 
