--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -63,7 +63,7 @@
 		<tr>
 			<td><input type="number" name="system.passiveSense" value="{{system.passiveSense}}"></td>
 			<td><input type="number" name="system.partyNerve" value="{{system.partyNerve}}"></td>
-			<td><input type="number" name="system.groupSneak.value" value="{{system.groupSneak}}"></td>
+			<td><input type="number" name="system.groupSneak" value="{{system.groupSneak}}"></td>
 		</tr>
 			<tr><td colspan=4><img id="vault-boy-status" style="width:auto;height:250px;display:block;margin:auto;border:none;" src='/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png'></td></tr>
 			<tr>
