--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -66,12 +66,12 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
-	<a class="item" data-tab="status">Status</a>
-    <a class="item" data-tab="perks">Perks</a>
-    <a class="item" data-tab="items">Combat</a>
-    <a class="item" data-tab="medicine">Aid</a>	
-    <a class="item" data-tab="backpack">Backpack</a>
-    <a class="item" data-tab="effects">Effects</a>
+	<a class="item" data-tab="status">STATUS</a>
+    <a class="item" data-tab="perks">PERKS</a>
+    <a class="item" data-tab="items">COMBAT</a>
+    <a class="item" data-tab="medicine">AID</a>	
+    <a class="item" data-tab="backpack">BACKPACK</a>
+    <a class="item" data-tab="effects">EFFECTS</a>
   </nav>
 
   {{!-- Sheet Body --}}
