--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -1,38 +1,11 @@
-<table>
+<table style="width:50%;">
+<tr class="label"><td>FOOD / DRINKS</td></tr>
 <tr>
-	<td style="text-align:left;">
-		<p>
-		{{#each ammos as |item id|}}
-			<a
-				class='item-control'
-				data-edit
-				data-item-id="{{item._id}}"
-				title='{{localize "DOCUMENT.Update" type="item"}}'
-			>
-					{{item.name}}({{system.quantity}}),
-			</a>
+	<td class="skill-table" style="text-align:left;">
+		{{#each foodAnddrinks as |item id|}}
+		<tr>
+		<td><p>{{item.name}}({{system.quantity}})</p></td></tr>
 		{{/each}}
-				{{#each medicines as |item id|}}
-			<a
-				class='item-control'
-				data-edit
-				data-item-id="{{item._id}}"
-				title='{{localize "DOCUMENT.Update" type="item"}}'
-			>
-					{{item.name}}({{system.quantity}}),
-			</a>
-		{{/each}}
-				{{#each foodAnddrinks as |item id|}}
-			<a
-				class='item-control'
-				data-edit
-				data-item-id="{{item._id}}"
-				title='{{localize "DOCUMENT.Update" type="item"}}'
-			>
-					{{item.name}}({{system.quantity}}),
-			</a>
-		{{/each}}
-		</p>
 	</td>
 </tr>
 </table>
