Food and Drinks Tab Added

--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -1,11 +1,38 @@
-<table style="width:50%;">
-<tr class="label"><td>FOOD / DRINKS</td></tr>
-<tr>
-	<td class="skill-table" style="text-align:left;">
-		{{#each foodAnddrinks as |item id|}}
-		<tr>
-		<td><p>{{item.name}}({{system.quantity}})</p></td></tr>
-		{{/each}}
-	</td>
+<style>
+.sheet table .foodanddrinks td{
+	border:solid 1px;
+	vertical-align:middle;
+}
+.sheet .foodanddrinks .label{
+	font-size:12pt;
+}
+</style>
+<table>
+<tr><td><table class="foodanddrinks"> 
+ {{#each foodAnddrinks as |item id|}}
+ <tr><td class="label">{{item.name}}</td><td>{{{item.system.description}}}</td><td>({{system.quantity}})</td>
+	<td> 
+	<li class='item flexrow' data-item-id='{{item._id}}'>
+	<div class='item-controls'>
+		<a
+			style="float:right;margin-right:10px;"
+			class='item-control item-delete'
+			title='{{localize "DOCUMENT.Delete" type=' item'}}'
+		>
+				<i class='fas fa-trash'></i>
+		</a>
+		<a
+			style="float:right;margin-right:10px;"
+			class='item-control'
+			data-edit
+			data-item-id="{{item._id}}"
+			title='{{localize "DOCUMENT.Update" type=' item'}}'
+		>
+				<i class='fas fa-edit'></i>
+		</a>
+</div>
+</li></td></tr>
+  {{/each}}
+</table></td>
 </tr>
 </table>
