--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -34,6 +34,7 @@
 								<a
 									style="float:right;margin-right:10px;"
 									class='item-control item-delete'
+									data-item-id="{{item._id}}"
 									title='{{localize "DOCUMENT.Delete" type=' item'}}'
 								>
 									<i class='fas fa-trash'></i>
