Added Karma Caps

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -54,6 +54,10 @@
 		<td><input id="caps" type="number" name="system.caps" value="{{system.caps}}"/></td>
 		<td><input id="modifycaps" class="modify" onchange="updatecaps(this.value)" value='' placeholder="modify" type="number" />
 		</td></tr>
+	</table>
+	<table class="current-caps"><tr><td style="vertical-align:middle;">Karma:</td>
+		<td><input id="caps" class="karma" type="number" name="system.karmaCaps.value" value="{{system.karmaCaps.value}}"/> / <input id="caps" class="karma" type="number" name="system.karmaCaps.max" value="{{system.karmaCaps.max}}"/></td>
+		</tr>
 	</table></td>
 	</tr>
 	</table>
