--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -18,7 +18,7 @@
 			<td class="bio-label"><span class="label">XP:</span></td>
 			<td><input id="xp" type="number" name="system.xp" value="{{system.xp}}" /></td>
 			<td><input id="modifyxp" onchange="updatexp(this.value)" class="modify" placeholder="modify" type="number" /></td></tr>			
-			<tr><td><img style="width:60px;height:60px;border:none;margin:0px;padding:0px;" src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png"></td>
+			<tr><td><img title="Carry Load" style="width:60px;height:60px;border:none;margin:0px;padding:0px;" src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png"></td>
 			<td style="vertical-align:middle" class="statusnum"><input  type="number" name="system.carryLoad.value" value="{{system.carryLoad.value}}"> / <input class="statusnum" type="number" name="system.carryLoad.max" value="{{system.carryLoad.max}}"></td></tr>
 			</table>
 	</td><td>
@@ -50,13 +50,13 @@
 	<table>
 	<tr>
 	<td class="profile-image-td"><img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" /></td></tr><tr><td>
-		<table class="current-caps"><tr><td><img style="border:none;" class="custom-icon" src="/systems/arcane-arcade-fallout/assets/caps.webp" /></td>
+		<table class="current-caps"><tr><td><img title="Bottlecaps" style="border:none;" class="custom-icon" src="/systems/arcane-arcade-fallout/assets/caps.webp" /></td>
 		<td><input id="caps" type="number" name="system.caps" value="{{system.caps}}"/></td>
 		<td><input id="modifycaps" class="modify" onchange="updatecaps(this.value)" value='' placeholder="modify" type="number" />
 		</td></tr>
 	</table>
-	<table class="current-caps"><tr><td style="vertical-align:middle;">Karma:</td>
-		<td><input id="caps" class="karma" type="number" name="system.karmaCaps.value" value="{{system.karmaCaps.value}}"/> / <input id="caps" class="karma" type="number" name="system.karmaCaps.max" value="{{system.karmaCaps.max}}"/></td>
+	<table class="current-caps"><tr><td style="vertical-align:middle;"><img title="Karma Caps" style="border:none;" class="custom-icon" src="/systems/arcane-arcade-fallout/assets/KarmaCap.png" /></td>
+		<td><input id="caps" class="karma" type="number" name="system.karmaCaps.value" value="{{system.karmaCaps.value}}" min="0" max="{{system.karmaCaps.max}}"/> / <input id="caps" class="karma" type="number" name="system.karmaCaps.max" value="{{system.karmaCaps.max}}" min="0"/></td>
 		</tr>
 	</table></td>
 	</tr>
@@ -103,8 +103,7 @@
 	<td><span class="ability-mod" data-label="{{ability.label}}"> {{numberFormat ability.mod decimals=0 sign=true}}</span></td>
 	{{/each}}
 </tr></table> 
-		
-		
+
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
           {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-status.hbs"}}
         </section>
