--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -106,19 +106,19 @@
 									<td>
 										<button class="rollable resource-label" data-weapon-roll
 											data-weapon-id="{{item._id}}" class="resource-label">
-											Advantage
+											IN RANGE
 										</button>
 									</td>
 									<td>
 										<button class="rollable resource-label" data-weapon-roll
 											data-weapon-id="{{item._id}}" class="resource-label">
-											Standard
+											DISADVANTAGED
 										</button>
 									</td>
 									<td>
 										<button class="rollable resource-label" data-weapon-roll
 											data-weapon-id="{{item._id}}" class="resource-label">
-											Disadvantage
+											NAT 20 REQ
 										</button>
 									</td>
 								</tr>
