--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -111,6 +111,7 @@
 									</td>
 									<td>
 										<button class="rollable resource-label" data-weapon-roll
+											data-disadvantage="true"
 											data-weapon-id="{{item._id}}" class="resource-label">
 											DISADVANTAGED
 										</button>
