--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -118,7 +118,9 @@
 									</td>
 									<td>
 										<button class="rollable resource-label" data-weapon-roll
-											data-weapon-id="{{item._id}}" class="resource-label">
+											data-weapon-id="{{item._id}}"
+											data-noModifier="true"
+											class="resource-label">
 											NAT 20 REQ
 										</button>
 									</td>
